--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <li>
         <a href="HW_1/">Homework 1</a>
       </li>
+      <li>
+        <a href="HW_2/">Homework 2</a>
+      </li>
     </ul>
   </body>
 </html>
