link to video added

--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -111,6 +111,19 @@
           style="width: 800px"
         />
       </section>
+      <section>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/dEBVe8Ij7JU?si=WV7cApc3gkufr8UY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+        web-share"
+          allowfullscreen
+        >
+        </iframe>
+      </section>
     </main>
   </body>
 </html>
