--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <ul>
       <li>
-        <a href="HW_1/">Homework 1</a>
+        <a href="HW_1/">Homework 1: CV</a>
       </li>
       <li>
-        <a href="HW_2/">Homework 2</a>
+        <a href="HW_2/">Homework 2: Article about semantic tags</a>
       </li>
     </ul>
   </body>
