--- a/HW_2/index.html
+++ b/HW_2/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Semantic tags article</title>
   </head>
   <body>
     <header>
       <h1>HTML5 Семантичні елементи</h1>
       <p>
         Семантичний елемент чітко описує його значення як для браузера, так і
-        для розробника. Приклади не семантичних елементів: &lt;div&gt; і
-        &lt;span&gt; - нічого не говорить про його вміст. Приклади семантичних
+        для розробника. Приклади не <strong>семантичних</strong> елементів:
+        &lt;div&gt; і &lt;span&gt; - нічого не говорить про його вміст. Приклади
+        <strong>семантичних</strong>
         елементів: &lt;form&gt;, &lt;table&gt; і &lt;article&gt; - чітко
         визначає його зміст.
       </p>
