--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href="HW_2/">Homework 2: Article about semantic tags</a>
       </li>
+      <li>
+        <a href="HW_3/">Homework 3: Figma, Denis Novik</a>
+      </li>
     </ul>
   </body>
 </html>
