Images alts updated, rating media updated (SVGs added)

--- a/HW_3/index.html
+++ b/HW_3/index.html
@@ -21,21 +21,19 @@
         <h1>Denis Novik</h1>
         <img
           src="images/portret_photo.jpg"
-          alt="Portret photo of artist"
+          alt="Portret of artist"
           title="Portret photo of artist"
           style="width: 970px"
         />
       </section>
       <section id="About me">
         <h2>About me</h2>
+        <p>Hi, I'm Denis – UX/UI designer from Minsk.</p>
         <p>
-          Hi, I'm Denis – UX/UI designer from Minsk.
-          <br />
           I'm interested in design and everything connected with it. I'm
           studying at courses "Web and mobile design interfaces" in IT-Academy.
-          <br />
-          Ready to implement excellent projects with wonderful people.
         </p>
+        <p>Ready to implement excellent projects with wonderful people.</p>
       </section>
       <section id="Skills">
         <h2>Skills</h2>
@@ -49,12 +47,13 @@
               style="width: 80px"
             />
             <p>Adobe Photoshop</p>
-            <img
-              src="images/rating_ps.png"
-              alt="Photoshop rating"
-              title="Photoshop rating"
-              style="width: 170px"
-            />
+            <span>
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+            </span>
           </div>
           <div>
             <img
@@ -64,12 +63,13 @@
               style="width: 80px"
             />
             <p>Adobe Illustrator</p>
-            <img
-              src="images/rating_ai.png"
-              alt="Illustrator rating"
-              title="Illustrator rating"
-              style="width: 170px"
-            />
+            <span>
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+            </span>
           </div>
           <div>
             <img
@@ -79,12 +79,13 @@
               style="width: 80px"
             />
             <p>Adobe After Effects</p>
-            <img
-              src="images/rating_ae.png"
-              alt="After Effects rating"
-              title="After Effects rating"
-              style="width: 170px"
-            />
+            <span>
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/grey_star.svg" alt="Grey star icon" />
+            </span>
           </div>
           <div>
             <img
@@ -94,12 +95,13 @@
               style="width: 80px"
             />
             <p>Figma</p>
-            <img
-              src="images/rating_figma.png"
-              alt="Figma rating"
-              title="Figma rating"
-              style="width: 170px"
-            />
+            <span>
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+              <img src="images/black_star.svg" alt="Black star icon" />
+            </span>
           </div>
         </section>
       </section>
@@ -108,7 +110,7 @@
         <article>
           <img
             src="images/image_1.jpg"
-            alt="Project cover image"
+            alt="Project cover"
             title="Project cover image"
             style="width: 970px"
           />
@@ -117,7 +119,7 @@
         <article>
           <img
             src="images/image_2.jpg"
-            alt="Project cover image"
+            alt="Project cover"
             title="Project cover image"
             style="width: 970px"
           />
@@ -126,7 +128,7 @@
         <article>
           <img
             src="images/image_3.jpg"
-            alt="Project cover image"
+            alt="Project cover"
             title="Project cover image"
             style="width: 970px"
           />
