--- a/HW_4/index.html
+++ b/HW_4/index.html
@@ -1,78 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
   </head>
   <body>
-    <form action="#" method="post">
-      <div>
-        Name
-        <input type="text" name="name" placeholder="Enter name" id="1" />
-      </div>
-      <div>
-        Surname
-        <input type="text" name="surname" placeholder="Enter Surname" id="2" />
-      </div>
-      <div>
-        Email
-        <input
-          type="email"
-          name="user email"
-          placeholder="Enter email"
-          id="3"
-        />
-      </div>
-      <div>
-        Tel
-        <input type="tel" name="tel" placeholder="Enter tel" id="21" />
-      </div>
-      <div>
-        Password
-        <input
-          type="password"
-          name="password"
-          placeholder="Enter password"
-          id="2"
-        />
-      </div>
-      <div>
-        Date
-        <input type="date" name="date" id="" />
-      </div>
-      <div>
-        Radio
+    <main>
+      <h1>Персональні дані</h1>
+      <form action="#" method="post">
         <div>
-          <input type="radio" value="male" name="radio" id="male" />
-          <label for="male">Чоловіча</label>
+          Surname
+          <input
+            type="text"
+            name="surname"
+            placeholder="Enter Surname"
+            id="2"
+          />
         </div>
         <div>
-          <input type="radio" value="female" name="radio" />
-          <label for="male">Жіноча</label>
+          <label for="tel">Телефон</label>
+          <input
+            type="email"
+            name="userEmail"
+            placeholder="Enter email"
+            id="3"
+          />
         </div>
-      </div>
-      <div>
-        Checkbox
-        <div><input type="checkbox" name="checkbox1" value="" /> Car</div>
-        <div><input type="checkbox" name="checkbox2" value="" /> Bicycle</div>
-      </div>
-      <div>
-        <textarea name="textarea" cols="30" rows="4">Textarea</textarea>
-      </div>
-      <div>
-        <label for="file">Attach file</label>
-        <input type="file" name="file" id="file" />
-      </div>
-      <div>
-        <select name="pets" id="pet-select">
-          <option value="">--Please choose an option--</option>
-          <option value="dog">Dog</option>
-          <option value="cat">Cat</option>
-          <option value="hamster">Hamster</option>
-        </select>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
+        <div>
+          <label for="tel">Телефон</label>
+          <input
+            type="tel"
+            name="tel"
+            autocomplete="off"
+            placeholder="Enter tel"
+            id="tel"
+          />
+        </div>
+        <div>
+          <label for="password">Пароль</label>
+          <input
+            type="password"
+            name="password"
+            placeholder="Введіть пароль"
+            id="password"
+          />
+        </div>
+        <div>
+          Date
+          <input type="date" name="date" id="" />
+        </div>
+        <div>
+          Radio
+          <div>
+            <input type="radio" value="male" name="radio" id="male" />
+            <label for="male">Чоловіча</label>
+          </div>
+          <div>
+            <input type="radio" value="female" name="radio" />
+            <label for="male">Жіноча</label>
+          </div>
+        </div>
+        <div>
+          Checkbox
+          <div><input type="checkbox" name="checkbox1" value="" /> Car</div>
+          <div><input type="checkbox" name="checkbox2" value="" /> Bicycle</div>
+        </div>
+        <div>
+          <textarea name="textarea" cols="30" rows="4">Textarea</textarea>
+        </div>
+        <div>
+          <select name="pets" id="pet-select" required>
+            <option value="">--Please choose an option--</option>
+            <option value="dog">Front-End</option>
+            <option value="cat">Back-End</option>
+            <option value="hamster">Project Management</option>
+            <option value="hamster">QA Manual</option>
+          </select>
+        </div>
+        <button type="reset">Очистити форму</button>
+        <button type="submit">Зареєструватись</button>
+      </form>
+    </main>
   </body>
 </html>
