--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <a href="HW_2/">Homework 2: Article about semantic tags</a>
       </li>
       <li>
-        <a href="HW_3/">Homework 3: Figma, Denis Novik</a>
+        <a href="HW_3/">Homework 3: Figma, Denis Novik Portfolio</a>
+      </li>
+      <li>
+        <a href="HW_4/">Homework 4: Forms, Personal data set</a>
       </li>
     </ul>
   </body>
